--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,8 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "/index.html",
+      "handle": "filesystem"
     }
   ]
 }
