--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,20 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/exchange-rates",
+      "dest": "/api/app.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "public/$1"
+    }
+  ],
   "outputDirectory": "public"
 }
