--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/app.py",
-      "use": "@vercel/python"
+      "src": "public/index.html",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "public"
+      }
     }
   ],
   "routes": [
     {
-      "src": "/api/exchange-rates",
-      "dest": "/api/app.py"
-    },
-    {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "/index.html"
     }
   ],
   "outputDirectory": "public"
