--- a/.gitignore
+++ b/.gitignore
@@ -21,17 +21,21 @@ venv.bak/
 .poetry/
 
 # Archivos de credenciales sensibles (¡MUY IMPORTANTE!)
-*.json
+# *.json  # COMENTADO - NO ignorar todos los JSON
 *.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Archivos específicos de credenciales
+service-account-key.json
+credentials.json
+
 # Vercel
 .vercel/
-.next/ # Si usas Next.js (no aplica para este proyecto, pero es común)
-node_modules/ # Si usas Node.js para alguna parte (no aplica para este frontend)
+.next/
+node_modules/
 
 # Archivos de log
 *.log
