--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "google-spreadsheet": "^4.1.2",
-    "google-auth-library": "^9.6.3"
+    "google-auth-library": "^9.6.3",
+    "moment": "^2.30.1"
   },
   "engines": {
     "node": "18.x"
