--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,15 @@
 {
-  "name": "DharckStore Admin Panel",
-  "short_name": "Admin Panel",
-  "description": "Panel de administración para DharckStore",
-  "start_url": "/admin.html",
+  "name": "DHARCK STORE Admin Panel",
+  "short_name": "DHARCK Admin",
+  "description": "Panel de administración para DHARCK STORE",
+  "start_url": "/panel.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "orientation": "portrait",
+  "background_color": "#667eea",
+  "theme_color": "#667eea",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "/image/logo1.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
