Implementar control de caché y versionado automático

--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
       ]
     },
     {
-      "source": "/(index|panel)\.html",
+      "source": "/(index|panel)\\.html",
       "headers": [
         {
           "key": "Cache-Control",
